@@ -1,6 +1,6 @@
 [buildout]
 extends= https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-package-extras = [test, uploadimage]
+package-extras = [test]
 package-name = collective.ckeditor
 package-src = src/collective/ckeditor
 develop = .
@@ -82,7 +82,7 @@ templer.plonecore           = svn https://svn.plone.org/svn/collective/templer.p
 http-address = 8080
 eggs =
     ${buildout:common-eggs}
-    ${buildout:package-name}[uploadimage]
+    ${buildout:package-name}
 extra-paths =
 
 [release]
@@ -157,7 +157,7 @@ flake8-max-complexity = 17
 Pygments = 2.0.2
 plone.app.robotframework = 1.1
 robotframework = 3.0
-robotframework-selenium2library = 1.7.4
+robotframework-selenium2library = 3.0.0b1
 robotframework-selenium2screenshots = 0.7.0
 robotsuite = 1.7.0
 selenium = 3.5.0
