@@ -1,13 +1,14 @@
 from selenium.webdriver.common.action_chains import ActionChains
 from selenium.webdriver.remote.command import Command
-from Selenium2Library import Selenium2Library
+from SeleniumLibrary.base import keyword
+from SeleniumLibrary.keywords import ElementKeywords
 
-
+@keyword
 def mouse_select(self, source, xoffset, yoffset):
     xoffset = int(xoffset)
     yoffset = int(yoffset)
-    source_element = self._element_find(source, True, True)
-    browser = self._current_browser()
+    source_element = self.find_element(source)
+    browser = self.driver
     browser.execute_script("arguments[0].scrollIntoView(true);", source_element)
     chain = ActionChains(browser)
     chain.move_to_element_with_offset(source_element, 2, 2)
@@ -16,7 +17,7 @@ def mouse_select(self, source, xoffset, yoffset):
     chain.release()
     chain.perform()
 
-setattr(Selenium2Library, 'mouse_select', mouse_select)
+setattr(ElementKeywords, 'mouse_select', mouse_select)
 
 
 class TestKeywords(object):
